# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "stencila"
version = "0.98.0"
authors = ["Stencila <hello@stenci.la>"]
edition = "2018"

# Compile time feature flags. See https://www.worthe-it.co.za/blog/2018-11-18-compile-time-feature-flags-in-rust.html
# All features are on by default, use `--no-default-features --features="json http ..."` to
# cherry pick certain features.
# Our use of features is somewhat over the top but should hopefully allow us to create more
# minimal binaries as needed (e.g. for creating really small container images).

[features]

cli = ["template-handlebars", "structopt"]

serve = []
serve-stdio = []
serve-http = ["warp", "jsonwebtoken"]
serve-ws = ["warp", "jsonwebtoken"]
serve-static = ["warp", "rust-embed"]

request = []
request-stdio = []
request-docker = ["bollard"]
request-http = ["reqwest", "jsonwebtoken"]
request-ws = ["tokio-tungstenite", "jsonwebtoken"]

binaries = ["flate2", "tar", "which", "xz2", "zip"]

plugins = ["jsonschema", "semver"]
plugins-docker = ["plugins", "bollard"]
plugins-binary = ["plugins", "self_update"]
plugins-javascript = ["plugins"]
plugins-python = ["plugins"]
plugins-r = ["plugins"]
plugins-link = ["plugins"]

upgrade = ["self_update"]

config = ["humantime", "toml", "validator"]

import-elife = ["minidom"]
import-github = []

decode-date = ["dtparse"]
decode-docx = ["decode-pandoc"]
decode-html = ["kuchiki", "markup5ever"]
decode-json = []
decode-latex = ["decode-pandoc"]
decode-md = ["pulldown-cmark", "nom", "decode-html"]
decode-pandoc = ["binaries", "pandoc_types"]
decode-person = ["human_name"]
decode-toml = ["toml"]
decode-yaml = ["serde_yaml"]

encode-html = ["html-escape"]
encode-json = []
encode-md = []
encode-pandoc = ["binaries", "pandoc_types"]
encode-toml = ["toml"]
encode-txt = []
encode-yaml = ["serde_yaml"]

query-jsonptr = []
query-jmespath = ["jmespatch"]

template-handlebars = ["handlebars"]

watch = ["notify"]

default = [
    "cli",
    "serve",
    "serve-stdio",
    "serve-http",
    "serve-ws",
    "serve-static",
    "request",
    "request-docker",
    "request-http",
    "request-stdio",
    "request-ws",
    "binaries",
    "plugins",
    "plugins-binary",
    "plugins-docker",
    "plugins-link",
    "plugins-javascript",
    "plugins-python",
    "plugins-r",
    "upgrade",
    "config",
    "import-elife",
    "import-github",
    "decode-date",
    "decode-docx",
    "decode-html",
    "decode-json",
    "decode-latex",
    "decode-md",
    "decode-pandoc",
    "decode-person",
    "decode-toml",
    "decode-yaml",
    "encode-html",
    "encode-json",
    "encode-md",
    "encode-toml",
    "encode-txt",
    "encode-yaml",
    "query-jsonptr",
    "query-jmespath",
    "template-handlebars",
    "watch",
]

[dependencies]
Inflector = "0.11.4"
ansi_term = "=0.12.1"
async-trait = "=0.1.50"
base64 = "=0.13.0"
bollard = { version = "=0.11.0", optional = true }
chrono = "=0.4.19"
crossbeam-channel = "=0.5.1"
defaults = "=0.2.0"
dirs-next = "=2.0.0"
dtparse = { version = "=1.2.0", optional = true }
enum_dispatch = "=0.3.7"
eyre = "=0.6.5"
flate2 = { version = "=1.0.20", optional = true }
futures = "=0.3.15"
gitignore = "=1.0.7"
glob = "=0.3.0"
handlebars = { version = "=4.1.0", optional = true }
html-escape = { version = "=0.2.9", optional = true }
human_name = { version = "=1.0.2", optional = true }
humantime = { version = "=2.1.0", optional = true }
ignore = "=0.4.18"
itertools = "0.10.1"
jmespatch = { version = "=0.3.0", optional = true }
jsonschema = { version = "=0.11.0", optional = true }
jsonwebtoken = { version = "=7.2.0", optional = true }
kuchiki = { version = "=0.8.1", optional = true }
maplit = "=1.0.2"
markup5ever = { version = "=0.10.1", optional = true }
mime_guess = "=2.0.3"
minidom = { version = "=0.13.0", optional = true }
nanoid = "=0.4.0"
nom = { version = "=7.0.0-alpha1", optional = true }
notify = { version = "=4.0.17", optional = true }
once_cell = "=1.8.0"
pandoc_types = { version = "=0.4.0", optional = true }
pathdiff = "=0.2.0"
pulldown-cmark = { version = "=0.8.0", optional = true}
rand = "=0.8.4"
regex = "=1.5.4"
reqwest = { version = "=0.11.4", optional = true, features = ["json"] }
rust-embed = { version = "=5.9.0", optional = true }
schemars = { version = "=0.8.3", features = ["preserve_order", "chrono"] }
self_update = { version = "=0.27.0", optional = true, features = [
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate",
] }
semver = { version = "=1.0.3", optional = true }
serde = { version = "=1.0.126", features = ["derive", "rc"] }
serde_json = { version = "=1.0.64", features = ["preserve_order"] }
serde_with = "=1.9.4"
serde_yaml = { version = "=0.8.17", optional = true }
slug = "=0.1.4"
stencila-schema = "=1.10.0"
structopt = { version = "=0.3.22", optional = true }
strum = { version = "=0.21", features = ["derive"] }
strum_macros = "=0.21.1"
tar = { version = "=0.4.35", optional = true }
tempfile = "3.2.0"
thiserror = "=1.0.26"
tokio = { version = "=1.8.1", features = ["full"] }
tokio-tungstenite = { version = "=0.15.0", optional = true }
toml = { version = "=0.5.8", optional = true }
tracing = "=0.1.26"
tracing-appender = "=0.1.2"
tracing-error = "=0.1.2"
tracing-serde = "=0.1.2"
tracing-subscriber = "=0.2.19"
url = "=2.2.2"
validator = { version = "=0.14.0", features = ["derive"], optional = true }
warp = { version = "=0.3.1", optional = true }
which = { version = "=4.1.0", optional = true }
xz2 = { version = "=0.1.6", optional = true }
zip = { version = "=0.5.13", optional = true }

[dev-dependencies]
insta = { version = "1.7.1", features = ["glob"] }
pretty_assertions = "0.7.2"
proptest = "1.0.0"
