# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "stencila"
version = "0.114.0"
authors = ["Stencila <hello@stenci.la>"]
edition = "2018"

# Compile time feature flags. See https://www.worthe-it.co.za/blog/2018-11-18-compile-time-feature-flags-in-rust.html
# All features are on by default, use `--no-default-features --features="json http ..."` to
# cherry pick certain features.
# Our use of features is somewhat over the top but should hopefully allow us to create more
# minimal binaries as needed (e.g. for creating really small container images).

[features]

cli = ["structopt"]

serve = []
serve-http = ["warp", "jsonwebtoken"]
serve-static = ["warp", "rust-embed"]
serve-stdio = []
serve-ws = ["warp", "jsonwebtoken"]

request = []
request-docker = ["bollard"]
request-http = ["reqwest", "jsonwebtoken"]
request-stdio = []
request-ws = ["tokio-tungstenite", "jsonwebtoken"]

binaries = ["flate2", "reqwest", "semver", "tar", "which", "xz2", "zip"]

plugins = ["jsonschema", "semver"]
plugins-binary = ["plugins", "self_update"]
plugins-docker = ["plugins", "bollard"]
plugins-javascript = ["plugins"]
plugins-link = ["plugins"]
plugins-python = ["plugins"]
plugins-r = ["plugins"]

upgrade = ["self_update"]

import-elife = ["minidom"]
import-github = []

decode-date = ["dtparse"]
decode-docx = ["decode-pandoc"]
decode-html = ["kuchiki", "markup5ever"]
decode-json = []
decode-latex = ["decode-pandoc"]
decode-md = ["pulldown-cmark", "nom", "coerce", "decode-html", "encode-txt"]
decode-pandoc = ["binaries", "pandoc_types"]
decode-person = ["human_name"]
decode-rmd = ["decode-md"]
decode-rpng = ["png"]
decode-toml = []
decode-yaml = []

encode-docx = ["encode-pandoc"]
encode-html = ["html-escape"]
encode-json = []
encode-latex = ["encode-pandoc"]
encode-md = []
encode-pandoc = ["binaries", "pandoc_types"]
encode-pdf = ["chromiumoxide"]
encode-png = ["chromiumoxide"]
encode-rmd = ["encode-md"]
encode-rpng = ["encode-png", "png"]
encode-toml = []
encode-txt = []
encode-yaml = []

coerce = ["decode-date", "decode-person"]

reshape = ["decode-date", "decode-person", "encode-txt"]

compile-code = ["tree-sitter"]
compile-code-js = ["compile-code", "tree-sitter-javascript"]
compile-code-py = ["compile-code", "tree-sitter-python"]
compile-code-r = ["compile-code", "tree-sitter-r"]
compile-code-ts = ["compile-code", "compile-code-js", "tree-sitter-typescript"]

query-jmespath = ["jmespatch"]
query-jsonptr = []

default = [
  "cli",
  "serve",
  "serve-stdio",
  "serve-http",
  "serve-ws",
  "serve-static",
  "request",
  "request-docker",
  "request-http",
  "request-stdio",
  "request-ws",
  "binaries",
  "plugins",
  "plugins-binary",
  "plugins-docker",
  "plugins-link",
  "plugins-javascript",
  "plugins-python",
  "plugins-r",
  "upgrade",
  "import-elife",
  "import-github",
  "decode-date",
  "decode-docx",
  "decode-html",
  "decode-json",
  "decode-latex",
  "decode-md",
  "decode-pandoc",
  "decode-person",
  "decode-rmd",
  "decode-rpng",
  "decode-toml",
  "decode-yaml",
  "encode-docx",
  "encode-html",
  "encode-json",
  "encode-latex",
  "encode-md",
  "encode-pandoc",
  "encode-pdf",
  "encode-png",
  "encode-rmd",
  "encode-rpng",
  "encode-toml",
  "encode-txt",
  "encode-yaml",
  "coerce",
  "reshape",
  "compile-code",
  "compile-code-js",
  "compile-code-py",
  "compile-code-r",
  "compile-code-ts",
  "query-jsonptr",
  "query-jmespath",
]

[dependencies]
Inflector = "0.11.4"
ansi_term = "=0.12.1"
async-recursion = "0.3.2"
async-trait = "=0.1.51"
base64 = "=0.13.0"
bollard = { version = "=0.11.0", optional = true }
chromiumoxide = { version = "=0.3.1", optional = true, features = [
  "tokio-runtime",
] }
chrono = "=0.4.19"
crossbeam-channel = "=0.5.1"
defaults = "=0.2.0"
derivative = "=2.2.0"
dirs-next = "=2.0.0"
dtparse = { version = "=1.2.0", optional = true }
enum_dispatch = "=0.3.7"
eyre = "=0.6.5"
flate2 = { version = "=1.0.21", optional = true }
futures = "=0.3.16"
gitignore = "=1.0.7"
glob = "=0.3.0"
handlebars = "=4.1.2"
html-escape = { version = "=0.2.9", optional = true }
human_name = { version = "=1.0.2", optional = true }
humantime = "=2.1.0"
ignore = "=0.4.18"
itertools = "0.10.1"
jmespatch = { version = "=0.3.0", optional = true }
jsonschema = { version = "=0.12.1", optional = true }
jsonwebtoken = { version = "=7.2.0", optional = true }
kuchiki = { version = "=0.8.1", optional = true }
lexiclean = "=0.0.1"
maplit = "=1.0.2"
markup5ever = { version = "=0.10.1", optional = true }
mime_guess = "=2.0.3"
minidom = { version = "=0.13.0", optional = true }
nanoid = "=0.4.0"
nom = { version = "=7.0.0", optional = true }
notify = "=4.0.17"
once_cell = "=1.8.0"
pandoc_types = { version = "=0.4.0", optional = true }
path-slash = "=0.1.4"
pathdiff = "=0.2.0"
petgraph = { version = "=0.6.0", features = ["serde-1"] }
png = { git = "https://github.com/sayantangkhan/image-png", rev = "eb39301f86b3019b3c4e4a015f7ec5f62ee5c782", optional = true }
pulldown-cmark = { version = "=0.8.0", optional = true }
rand = "=0.8.4"
regex = "=1.5.4"
reqwest = { version = "=0.11.4", optional = true, features = ["json"] }
rust-embed = { version = "=6.1.0", features = ["compression"], optional = true }
schemars = { version = "=0.8.3", features = ["preserve_order", "chrono"] }
self_update = { version = "=0.27.0", optional = true, features = [
  "archive-tar",
  "archive-zip",
  "compression-flate2",
  "compression-zip-deflate",
] }
semver = { version = "=1.0.4", optional = true }
serde = { version = "=1.0.130", features = ["derive", "rc"] }
serde_json = { version = "=1.0.67", features = ["preserve_order"] }
serde_with = "=1.9.4"
serde_yaml = "=0.8.20"
sha2 = "0.9.6"
slug = "=0.1.4"
stencila-schema = "=1.11.1"
structopt = { version = "=0.3.22", optional = true }
strum = { version = "=0.21", features = ["derive"] }
strum_macros = "=0.21.1"
tar = { version = "=0.4.37", optional = true }
tempfile = "3.2.0"
thiserror = "=1.0.26"
tokio = { version = "=1.10.0", features = ["full"] }
tokio-tungstenite = { version = "=0.15.0", optional = true }
toml = "=0.5.8"
tracing = "=0.1.26"
tracing-appender = "=0.1.2"
tracing-error = "=0.1.2"
tracing-serde = "=0.1.2"
tracing-subscriber = "=0.2.20"
tree-sitter = { version = "=0.19.5", optional = true }
tree-sitter-javascript = { version = "=0.19.0", optional = true }
tree-sitter-python = { version = "=0.19.0", optional = true }
tree-sitter-r = { version = "=0.19.3", optional = true }
tree-sitter-typescript = { version = "=0.19.0", optional = true }
url = "=2.2.2"
validator = { version = "=0.14.0", features = ["derive"] }
warp = { version = "=0.3.1", optional = true }
which = { version = "=4.2.2", optional = true }
xz2 = { version = "=0.1.6", optional = true }
zip = { version = "=0.5.13", optional = true }

[dev-dependencies]
criterion = "0.3.5"
insta = { version = "1.7.2", features = ["glob"] }
pretty_assertions = "0.7.2"
proptest = "1.0.0"

[[bench]]
harness = false
name = "compile_code"
