[package]
name = "stencila-schema"
version = "1.12.0"
edition = "2018"
description = "Rust bindings for Stencila Schema"
authors = ["Nokome Bentley <nokome@stenci.la>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://schema.stenci.la"
repository = "https://github.com/stencila/schema"
keywords = ["schema", "executable", "documents"]

[dependencies]
chrono = "0.4.19"
defaults = "0.2.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_with = "1.11.0"
strum = { version = "0.23.0", features = ["derive"] }

[dev-dependencies]
maplit = "1.0.2"
pretty_assertions = "0.7.2"
