[package]
name = "stencila-node"
version = "0.49.0"
authors = ["Nokome Bentley <nokome@stenci.la>"]
license = "Apache-2.0"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "node"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.8.0"

[dependencies]
stencila = { path = "../../rust" }
neon = "0.8.0"
