[package]
edition = "2021"
name = "node"
version = "2.0.0-alpha.25"

[lib]
crate-type = ["cdylib"]

[dependencies]
codecs = { path = "../../rust/codecs" }
common = { path = "../../rust/common" }
napi = { version = "2.16.11", default-features = false, features = [
    "async",
    "napi8",
] }
napi-derive = "2.16.12"

[build-dependencies]
napi-build = "2.1.3"
