[package]
edition = "2024"
name = "node"
version = "2.0.0-alpha.25"

[lib]
crate-type = ["cdylib"]

[dependencies]
codecs = { path = "../../rust/codecs" }
eyre = { workspace = true }
napi = { version = "2.16.17", default-features = false, features = [
    "async",
    "napi8",
] }
napi-derive = "2.16.13"
serde_json = { workspace = true }

[build-dependencies]
napi-build = "2.2.2"
