# SPDX-FileCopyrightText: 2024 Nokome Bentley
#
# SPDX-License-Identifier: Apache-2.0

# See https://packaging.python.org/en/latest/specifications/declaring-project-metadata/ for `project` keys

[project]
name = "stencila"
version = "2.0.0b1"
description = "Python SDK for Stencila"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Nokome Bentley", email = "nokome@stencila.io" }]

requires-python = ">=3.10"

keywords = [
    "programmable",
    "reproducible",
    "interactive",
    "documents",
    "python",
    "SDK",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Software Development",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    'StrEnum==0.4.15;python_version<"3.11"',
    "beartype==0.18.5",
    "cattrs==23.2.3",
    "stencila-types==2.0.0b1",
]

[project.urls]
Homepage = "https://github.com/stencila/stencila/tree/main/python#readme"
Repository = "https://github.com/stencila/stencila"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "stencila._stencila"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "coverage>=7.5.4",
    "maturin>=1.5.1",
    "pip-audit>=2.7.2",
    "pyright>=1.1.369",
    "pytest-asyncio>=0.23.7",
    "pytest-benchmark>=4.0.0",
    "pytest>=8.2.1",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
# Don't run bench files.
# python_files = ["test_*.py", "bench_*.py"]
# python_functions = ["test_*", "bench_*"]
asyncio_mode = "auto"

[tool.coverage.run]
omit = [
    # Omit generated type files
    "python/stencila/types/*.py",
    # Omit tests
    "python/tests/*.py",
]

[tool.ruff]
# https://docs.astral.sh/ruff/
line-length = 88
lint.select = [
    "F",    # pyflakes
    "E",    # codestyle
    "W",    # warning
    "C90",  # complexity
    "N",    # pep-naming
    "UP",   # upgrade
    "S",    # bandit
    "B",    # bug-bear
    "A",    # builtins
    "C4",   # comprehensions
    "PIE",  # misc
    "ISC",  # literal concat
    "T20",  # print statements
    "PT",   # pytest
    "RET",  # returns
    "SIM",  # simplify
    "PTH",  # use pathlib
    "Q",    # quotes
    "PLR",  # refactor
    "PLE",  # pylint errors
    "I001", # isort
]

lint.ignore = [
    "N812",   # This is accepted practice in this project.
    "ISC001",
]

# Automatically fixing is often premature.
lint.unfixable = [
    "T20",  # Removes print statements
    "F841", # Removes unused variables
]

src = ['python', 'tests']

[tool.ruff.lint.per-file-ignores]
"python/tests/*.py" = ["S101"]

# Shadowing python builtins is a bit nasty, but hey.
"convert.py" = ['A002']


[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.10"
venvPath = "."
venv = ".venv"
