[project]
name = "stencila_plugin"
version = "2.0.0a27"
description = "Library for building Stencila Plugins"
readme = "README.md"
authors = [
    { name = "Nokome Bentley", email = "nokome@stencila.io" },
    { name = "Brett Calcott", email = "brett@dragonfly.co.nz" },
]
dependencies = [
    "aiohttp>=3.9.3",
    "stencila-types>=2.0.0a26",
]
requires-python = ">=3.10"
keywords = [
    "programmable",
    "reproducible",
    "interactive",
    "documents",
    "python",
    "SDK",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Software Development",
    "License :: OSI Approved :: Apache Software License",
]

[project.license]
text = "Apache-2.0"

[project.urls]
Homepage = "https://github.com/stencila/stencila/tree/main/python#readme"
Repository = "https://github.com/stencila/stencila"

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest-asyncio>=0.23.6",
    "pytest>=8.1.1",
    "pip-audit>=2.7.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 88
src = [
    "src",
    "tests",
]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "C90",
    "N",
    "UP",
    "S",
    "B",
    "A",
    "C4",
    "PIE",
    "ISC",
    "T20",
    "PT",
    "RET",
    "SIM",
    "PTH",
    "Q",
    "PLR",
    "PLE",
    "I001",
]
ignore = [
    "N812",
    "RET504",
    "ISC001",
]
unfixable = [
    "T20",
    "F841",
]

[tool.ruff.lint.per-file-ignores]
"src/stencila_plugin/kernel.py" = [
    "B027",
]
"tests/**" = [
    "S101",
]

[tool.pyright]
include = [
    "src",
    "tests",
]
pythonVersion = "3.10"
venvPath = "."
venv = ".venv"
