[project]
name = "stencila_types"
version = "2.0.0-alpha.25"
description = "Python types for Stencila"
readme = "README.md"
authors = [
  { name = "Nokome Bentley", email = "nokome@stencila.io" },
  { name = "Brett Calcott", email = "brett@dragonfly.co.nz" },
]
dependencies = [
  "cattrs>=23.2.3",
  "beartype>=0.17.2",
  "strenum>=0.4.15; python_version < \"3.11\"",
]
requires-python = ">=3.10"
license = "Apache-2.0"

keywords = [
  "programmable",
  "reproducible",
  "interactive",
  "documents",
  "python",
  "SDK",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Topic :: Software Development",
  "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://github.com/stencila/stencila/tree/main/python#readme"
Repository = "https://github.com/stencila/stencila"

[project.optional-dependencies]
test = ["pytest-sugar>=1.0.0"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
testing = ["pytest>=8.1.1"]
pyright = []

[tool.pytest.ini_options]
addopts = "-s"


[tool.ruff]
# https://docs.astral.sh/ruff/
target-version = "py310"
line-length = 88
lint.select = [
  "F",    # pyflakes
  "E",    # codestyle
  "W",    # warning
  "C90",  # complexity
  "N",    # pep-naming
  "UP",   # upgrade
  "S",    # bandit
  "B",    # bug-bear
  "A",    # builtins
  "C4",   # comprehensions
  "PIE",  # misc
  "ISC",  # literal concat
  "T20",  # print statements
  "PT",   # pytest
  "RET",  # returns
  "SIM",  # simplify
  "PTH",  # use pathlib
  "Q",    # quotes
  "PLR",  # refactor
  "PLE",  # pylint errors
  "I001", # isort
]

lint.ignore = [
  "N812", # This is accepted practice in this project.
]

# Automatically fixing is often premature.
lint.unfixable = [
  "T20",  # Removes print statements
  "F841", # Removes unused variables
]

src = ['src', 'tests']

[tool.ruff.lint.per-file-ignores]
# Ignore long lines in generated code
"src/stencila_types/types.py" = ["E501"]
"tests/**" = ["S101"]
