[package]
name = "archive-utils"
description = "Utilities for working with file archives"
version = "0.0.0"
edition = "2021"

[features]
tar-gz = ["tar", "flate2"]
tar-xz = ["tar", "xz2"]
tar-zst = ["tar", "zstd"]

[dependencies]
common = { path = "../common" }
path-utils = { path = "../path-utils" }

flate2 = { version = "1.0.24", optional = true }
tar = { version = "0.4.37", optional = true }
xz2 = { version = "0.1.7", optional = true }
zip = { version = "0.6.2", optional = true, default-features = false, features = [
    "deflate",
    "time",
] }
zstd = { version = "0.11.2", optional = true }
