[package]
name = "ask"
version = "0.0.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
lsp-types = { version = "0.95.1" }
owo-colors = "4.2.2"
rpassword = "7.4.0"
strum = { workspace = true }
textwrap = { version = "0.16.2", features = ["terminal_size"] }

[lints]
workspace = true
