[package]
name = "assistant-specialized"
version = "0.1.0"
edition = "2021"

[dependencies]
assistant = { path = "../assistant" }
assistant-anthropic = { path = "../assistant-anthropic" }
assistant-google = { path = "../assistant-google" }
assistant-mistral = { path = "../assistant-mistral" }
assistant-ollama = { path = "../assistant-ollama" }
assistant-openai = { path = "../assistant-openai" }
cached = { version = "0.47.0", features = ["async"] }
codec-text-trait = { path = "../codec-text-trait" }
minijinja = { version = "1.0.11", features = ["loader"] }
rust-embed = { version = "8.2.0", features = ["interpolate-folder-path", "include-exclude"] }
