[package]
name = "assistant-specialized"
version = "0.1.0"
edition = "2021"

[dependencies]
app = { path = "../app" }
assistant = { path = "../assistant" }
assistant-anthropic = { path = "../assistant-anthropic" }
assistant-google = { path = "../assistant-google" }
assistant-mistral = { path = "../assistant-mistral" }
assistant-ollama = { path = "../assistant-ollama" }
assistant-openai = { path = "../assistant-openai" }
cached = { version = "0.49.2", features = ["async"] }
codec-markdown-trait = { path = "../codec-markdown-trait" }
rust-embed = { version = "8.3.0", features = ["interpolate-folder-path", "include-exclude"] }
