[package]
name = "assistant"
version = "0.0.0"
edition = "2021"

[dependencies]
app = { path = "../app" }
codec-markdown-trait = { path = "../codec-markdown-trait" }
codecs = { path = "../codecs" }
context = { path = "../context" }
common = { path = "../common" }
fastembed = { version = "3.2.0", optional = true }
format = { path = "../format" }
merge = "0.1.0"
node-authorship = { path = "../node-authorship" }
schema = { path = "../schema" }
secrets = { path = "../secrets" }
serde = { version = "1.0.197", features = ["derive"] }
