[package]
name = "assistant"
version = "0.0.0"
edition = "2021"

[dependencies]
app = { path = "../app" }
codec-markdown-trait = { path = "../codec-markdown-trait" }
codecs = { path = "../codecs" }
context = { path = "../context" }
common = { path = "../common" }
fastembed = { version = "3.5.0", optional = true }
format = { path = "../format" }
merge = "0.1.0"
schema = { path = "../schema" }
secrets = { path = "../secrets" }
