[package]
name = "assistant"
version = "0.0.0"
edition = "2021"

[dependencies]
app = { path = "../app" }
model = { path = "../model" }
models-anthropic = { path = "../models-anthropic" }
models-google = { path = "../models-google" }
models-mistral = { path = "../models-mistral" }
models-ollama = { path = "../models-ollama" }
models-openai = { path = "../models-openai" }
cached = { workspace = true }
rust-embed = { version = "8.3.0", features = ["interpolate-folder-path", "include-exclude"] }
